Actualizada a nuevos colores

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ html,body,div,span,h1,h2,h3,h4,h5,h6,p{font-size:100%;font:inherit;padding:0;bor
 body{line-height:1}ol,ul{list-style:none}
 
 body{
-	background:url(../images/home-bg.jpg) no-repeat top center #b1d95c;
+	background:url(../images/home-bg.jpg) no-repeat top center #e73b3b;
 	font-family:'PT Sans', Helvetica, Arial, sans-serif;
 	color:#7f7f7f;
 	background-attachment:fixed;
@@ -24,7 +24,7 @@ body{
 }
 
 body a{
-	color:#b1d95c;
+	color:#e73b3b;
 	text-decoration:none;
 }
 body a:hover{
@@ -56,7 +56,7 @@ body a:hover{
 	right:0px;
 	padding:15px 0px;
 	height:40px;
-	background: #b1d95c;
+	background: #e73b3b;
 	z-index:1000;
 	text-align:center;
 	color:#fff;
@@ -129,7 +129,7 @@ body a:hover{
 	color:#fff;
 }
 .top-nav .nav .sub-nav li.drop-down-bottom{
-	background:#b1d95c;
+	background:#e73b3b;
 	height:5px;
 	display:block;
 	-webkit-border-bottom-right-radius: 5px;
@@ -140,7 +140,7 @@ body a:hover{
 	border-bottom-left-radius: 5px;
 }
 .top-nav .nav li a{
-	background:#b1d95c;
+	background:#e73b3b;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
@@ -152,7 +152,7 @@ body a:hover{
 	
 }
 .top-nav .nav li a:hover{
-	background:#a4c956;
+	background:#e85757;
 	-webkit-transition: background-color 200ms linear;
 	-moz-transition: background-color 200ms linear;
 	-o-transition: background-color 200ms linear;
@@ -276,7 +276,7 @@ textarea, input { outline: none; }
 	top:-11px!important;
 }
 .theme-form.sign-up-form input[type=submit]{
-	background:url(../images/icon-arrow-right.png) no-repeat 154px 22px #b1d95c;
+	background:url(../images/icon-arrow-right.png) no-repeat 154px 22px #e73b3b;
 	border:none;
 	-webkit-border-top-right-radius: 5px;
 	-webkit-border-bottom-right-radius: 5px;
@@ -296,7 +296,7 @@ textarea, input { outline: none; }
 	padding-right:20px;
 }
 .theme-form input[type=submit]:hover{
-	background:url(../images/icon-arrow-right.png) no-repeat 154px 22px #a4c956;
+	background:url(../images/icon-arrow-right.png) no-repeat 154px 22px #e85757;
 	-webkit-transition: background-color 200ms linear;
 	-moz-transition: background-color 200ms linear;
 	-o-transition: background-color 200ms linear;
@@ -382,7 +382,7 @@ textarea, input { outline: none; }
 .full-width-features h1, .theme-modal h3, h1{
 	font-family:"Arvo", sans-serif;
 	font-weight:200;
-	color:#b1d95c;
+	color:#e73b3b;
 	text-align:center;
 	font-size:44px;
 	margin-top:0px;
@@ -455,7 +455,7 @@ textarea, input { outline: none; }
 }
 
 .pricing-column:hover > .pricing-title {
-    border-top: 3px solid rgba(177,217,92,0.9);
+    border-top: 3px solid rgba(232,87,87,0.9);
 }
 
 .pricing-column:hover > .pricing-button {
@@ -481,7 +481,7 @@ textarea, input { outline: none; }
 }
 
 .pricing-column li.pricing-price {
-	color:#b1d95c;
+	color:#e73b3b;
 	font-size: 200%;
 	line-height: 120%;
 }
@@ -509,7 +509,7 @@ textarea, input { outline: none; }
 	background:none;
 }
 .call-to-action .scroll-top{
-	background:#b1d95c;
+	background:#e73b3b;
 	border:none;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
@@ -620,7 +620,7 @@ textarea, input { outline: none; }
 }
 
 .footer{
-	background:#b1d95c;
+	background:#e73b3b;
 	padding:50px 0px;
 	color:#fff;
 	font-size:13px;
