Peche da emision

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ html,body,div,span,h1,h2,h3,h4,h5,h6,p{font-size:100%;font:inherit;padding:0;bor
 body{line-height:1}ol,ul{list-style:none}
 
 body{
-	background:url(../images/home-bg.jpg) no-repeat top center #e73b3b;
+	background:url(../images/cierreemision.jpg) no-repeat center #e73b3b;
 	font-family:'PT Sans', Helvetica, Arial, sans-serif;
 	color:#7f7f7f;
 	background-attachment:fixed;
